# usb2can

./: README.md
firmware/: CAN.d  CAN_Module.c  CAN_Module.cpp  CAN_Module.h  Descriptors.c  EEPROM.c  EEPROM.h  Interpreter.c  Interpreter.h  USB2Can.c  USB2Can.h  config.h  makefile
firmware/Test/: CMakeLists.txt  can_message_test.cpp  interpreter_test.cpp
firmware/lib/CAN/: can.h
firmware/lib/CAN/demo/: can.h  makefile
firmware/lib/CAN/src/: config.h  makefile  mcp2515_private.h
hardware/: usb2can.brd  usb2can.sch
